--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,7 +11,7 @@
     flex-direction: row;
     justify-content: space-around;
 }
-.button-container {
+.input {
 }
 @media only screen and (max-width: 813px) {
     .header {
