comments are showing up

--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,11 @@
 body {
+    border: none;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     color: white !important;
+    width: 100vw;
+    height: fit-content;
 }
 html {
     background-color: #333;
