--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -7,7 +7,9 @@
     align-items: center;
     flex-direction: column;
     padding-top: 1rem;
+    width: 100%;
 }
+
 .actions-container {
     display: grid;
     grid-template-columns: 30% 70%;
