--- a/src/components/Comment/Comment.module.scss
+++ b/src/components/Comment/Comment.module.scss
@@ -11,7 +11,12 @@
 }
 .like,
 .dislike {
-    padding-right: 0.5rem;
+    &:hover {
+        cursor: pointer;
+    }
 }
 .quantity-label {
+    font-size: 0.8rem;
+    padding-right: 0.5rem;
+    display: inline;
 }
