--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,3 +1,4 @@
+@import "../../assets/scss/variables";
 .meme {
     width: 400px;
 }
@@ -38,4 +39,8 @@
     &:hover {
         cursor: pointer;
     }
+}
+.date {
+    font-size: 0.8rem;
+    color: $mutedTheme;
 }
