--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,7 +11,8 @@
     flex-direction: row;
     justify-content: space-around;
 }
-.input {
+.profile {
+    margin-top: 0.3rem;
 }
 @media only screen and (max-width: 813px) {
     .header {
